kubernetes: Add a few recommended admission controllers
Add ServiceAccount, PersistentVolumeLabel and DefaultTolerationSeconds.
These are for production only, toollabs are not touched.
Those are the recommended admission controllers for version 1.7 of
kubernetes which is what we are running

Bug: T170119
Change-Id: I7ddb79fb7fa2ed70703fe8adf5d9f52433cc2ca3

--- a/hieradata/role/common/kubernetes/master.yaml
+++ b/hieradata/role/common/kubernetes/master.yaml
@@ -4,8 +4,11 @@ profile::kubernetes::master::apiserver_count: 2
 profile::kubernetes::master::admission_controllers:
   NamespaceLifecycle: ''
   LimitRanger: ''
+  ServiceAccount: ''
+  PersistentVolumeLabel: ''
   DefaultStorageClass: ''
   ResourceQuota: ''
+  DefaultTolerationSeconds: ''
 profile::kubernetes::master::expose_puppet_certs: true
 profile::kubernetes::master::service_cert: "kubemaster.svc.%{::site}.wmnet"
 profile::kubernetes::master::ssl_cert_path: "/etc/ssl/localcerts/kubemaster.svc.%{::site}.wmnet.crt"
