--- a/hieradata/role/common/kubernetes/staging/master.yaml
+++ b/hieradata/role/common/kubernetes/staging/master.yaml
@@ -6,8 +6,11 @@ profile::kubernetes::master::apiserver_count: 1
 profile::kubernetes::master::admission_controllers:
   NamespaceLifecycle: ''
   LimitRanger: ''
+  ServiceAccount: ''
+  PersistentVolumeLabel: ''
   DefaultStorageClass: ''
   ResourceQuota: ''
+  DefaultTolerationSeconds: ''
 profile::kubernetes::master::expose_puppet_certs: true
 profile::kubernetes::master::ssl_cert_path: "/etc/kubernetes/ssl/cert.pem"
 profile::kubernetes::master::ssl_key_path: "/etc/kubernetes/ssl/server.key"
