Tune the kafka-jumbo.cfg partman recipe
Bug: T174457
Change-Id: I6bc19e39e96db3ee9af3a57ac3cc4d38dd8e4d71

--- a/modules/install_server/files/autoinstall/partman/kafka-jumbo.cfg
+++ b/modules/install_server/files/autoinstall/partman/kafka-jumbo.cfg
@@ -1,9 +1,13 @@
-# configuration to create:
+# configuration:
 #  * hardware raid on kafka-jumbo hosts
-#  * sda raid1: 2 * 1TB mounted as /
-#  * sdb raid10: 12 * 4TB in 90% lvm as /srv
-#  ** 10% empty space for later/emergency growth
-
+#  * sda raid1 (Flex Bay): 2 * 1TB
+#  * sdb raid10: 12 * 4TB
+#
+# layout:
+# * Two LVM physical volumes, vg-flex (sda) and vg-data (sdb)
+# * 5GB /boot partition on /dev/sda1, no LVM
+# * 995GB / partition on a vg-flex logical volume, called 'root'
+# * /srv partition on a vg-data logical volume, called 'srv'
 
 d-i	partman-auto/method	string	lvm
 d-i	partman-auto/disk	string	/dev/sda /dev/sdb
@@ -14,27 +18,53 @@ d-i	partman-lvm/confirm	boolean	true
 d-i	partman-lvm/confirm_nooverwrite	boolean	true
 d-i	partman/confirm	boolean	true
 
-d-i	partman-auto/expert_recipe	string	\
-		40000 40000 12000000 ext4		\
-			$primary{ }		\
-			$bootable{ }		\
-			method{ format }	\
-			format{ }		\
-			device{ /dev/sda }	\
-			use_filesystem{ }	\
-			filesystem{ ext4 }	\
-			mountpoint{ / } 	\
-		.				\
-		64 1000 10000000 ext4		\
-			lv_name{ data }		\
-			$defaultignore{ }	\
-			$lvmok{ }		\
-			mountpoint{ /srv }	\
-			device{ /dev/sdb }	\
-			use_filesystem{ }	\
-			filesystem{ ext4 }	\
-			options/nobarrier { nobarrier } \
-			options/noatime { noatime } \
+d-i	partman-auto/choose_recipe	lvm
+
+d-i     partman-auto/expert_recipe	string	\
+		lvm ::							\
+		5000 5000 5000 ext4				\
+			$primary{ }					\
+			$bootable{ }				\
+			method{ format }			\
+			format{ }					\
+			use_filesystem{ }			\
+			filesystem{ ext4 }			\
+			mountpoint{ /boot }			\
+			device{ /dev/sda }			\
+		.								\
+		100000 300000 1000000000 ext4	\
+			$defaultignore{ }			\
+			$primary{ }					\
+			method{ lvm }				\
+			device{ /dev/sda }			\
+			vg_name{ vg-flex }			\
+		.								\
+		500000 300 -1 ext4				\
+			$defaultignore{ }			\
+			$primary{ }					\
+			method{ lvm }				\
+			device{ /dev/sdb }			\
+			vg_name{ vg-data }			\
+		.								\
+		600000 600000 600000 ext4		\
+			$lvmok{ }					\
+			method{ format }			\
+			format{ }					\
+			use_filesystem{ }			\
+			filesystem{ ext4 }			\
+			mountpoint{ / }				\
+			in_vg{ vg-flex }			\
+			lv_name{ root }				\
+		.								\
+		40000 80000 21000000 ext4		\
+			$lvmok{ }					\
+			method{ format }			\
+			format{ }					\
+			use_filesystem{ }			\
+			filesystem{ ext4 }			\
+			mountpoint{ /srv }			\
+			in_vg{ vg-data }			\
+			lv_name{ srv }				\
 		.
 
 d-i	partman-auto-lvm/guided_size	string	90%
@@ -43,6 +73,9 @@ d-i	partman/choose_partition	\
 		select	finish
 d-i	partman-partitioning/confirm_write_new_label	boolean	true
 
-d-i	partman-auto/choose_recipe	es
 d-i	partman/confirm_nooverwrite	boolean	true
 partman-basicfilesystems partman-basicfilesystems/no_swap boolean false
+
+# do not prompt for 'no filesystem on partition'
+d-i	partman-basicmethods/method_only	boolean false
+d-i	partman-basicfilesystems/no_mount_point boolean false
