role::common::configcluster: allow zookeeper daemons to communicate
Change-Id: I88f25d403ddc0f8ea3257010cd79bef83451ce3d

--- a/hieradata/role/common/configcluster.yaml
+++ b/hieradata/role/common/configcluster.yaml
@@ -30,4 +30,4 @@ profile::zookeeper::sync_limit: 8
 # To avoid version conflics with Cloudera zookeeper package, this
 # class manually specifies which debian package version should be installed.
 profile::zookeeper::zookeeper_version: '3.4.5+dfsg-2+deb8u2'
-profile::zookeeper::firewall::srange: '(($HADOOP_MASTERS $KAFKA_BROKERS_ANALYTICS $KAFKA_BROKERS_MAIN $DRUID_HOSTS @resolve(krypton.eqiad.wmnet)))'
+profile::zookeeper::firewall::srange: '(($HADOOP_MASTERS $KAFKA_BROKERS_ANALYTICS $KAFKA_BROKERS_MAIN $DRUID_HOSTS $ZOOKEEPER_HOSTS_MAIN @resolve(krypton.eqiad.wmnet)))'
