adding samwilson to admin module
user will be added to wmf group after this is merged live

Bug: T174644
Change-Id: Ieca4ae305320cead66424416d1d63b055a7bacbe

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -2738,3 +2738,7 @@ ldap_only_users:
     ensure: present
     realname: Moska Noor
     email: mnoor@wikimedia.org
+  samwilson:
+    ensure: present
+    realname: Sam Wilson
+    email: swilson@wikimedia.org
