Instance-configurable `heapdump_directory`
In a multi-instance, JBOD configuration, we need to configure
heapdumps to be stored on the individually mounted devices, and not
under a common base.

This changeset also configures 2001 (the first node of this type)
accordingly.

Bug: T169939
Change-Id: I01e775cfe1ad55f0ce7b6a018a545b7b77ad75ed

--- a/hieradata/role/common/restbase/production_ng.yaml
+++ b/hieradata/role/common/restbase/production_ng.yaml
@@ -71,6 +71,7 @@ profile::cassandra::instances:
         - /srv/sdc/cassandra-a/data
         - /srv/sdd/cassandra-a/data
         - /srv/sde/cassandra-a/data
+      heapdump_directory: /srv/sda/cassandra-a
     b:
       listen_address: 10.192.16.163
       data_file_directories:
@@ -79,6 +80,7 @@ profile::cassandra::instances:
         - /srv/sdc/cassandra-b/data
         - /srv/sdd/cassandra-b/data
         - /srv/sde/cassandra-b/data
+      heapdump_directory: /srv/sdb/cassandra-a
     c:
       listen_address: 10.192.16.164
       data_file_directories:
@@ -87,6 +89,7 @@ profile::cassandra::instances:
         - /srv/sdc/cassanrda-c/data
         - /srv/sdd/cassanrda-c/data
         - /srv/sde/cassanrda-c/data
+      heapdump_directory: /srv/sdc/cassandra-a
   # "restbase2003.codfw.wmnet":
   #   a:
   #     listen_address: 10.192.32.134
