--- a/hieradata/role/common/restbase/production_ng.yaml
+++ b/hieradata/role/common/restbase/production_ng.yaml
@@ -71,6 +71,7 @@ profile::cassandra::instances:
         - /srv/sdc4/cassandra-a/data
         - /srv/sdd4/cassandra-a/data
         - /srv/sde4/cassandra-a/data
+      heapdump_directory: /srv/sda4/cassandra-a
     b:
       listen_address: 10.192.16.163
       data_file_directories:
@@ -79,6 +80,7 @@ profile::cassandra::instances:
         - /srv/sdc4/cassandra-b/data
         - /srv/sdd4/cassandra-b/data
         - /srv/sde4/cassandra-b/data
+      heapdump_directory: /srv/sdb4/cassandra-b
     c:
       listen_address: 10.192.16.164
       data_file_directories:
@@ -87,6 +89,7 @@ profile::cassandra::instances:
         - /srv/sdc4/cassanrda-c/data
         - /srv/sdd4/cassanrda-c/data
         - /srv/sde4/cassanrda-c/data
+      heapdump_directory: /srv/sdc4/cassandra-c
   # "restbase2003.codfw.wmnet":
   #   a:
   #     listen_address: 10.192.32.134
