Configure `disk_failure_policy: best_effort`
The new (aka restbase-ng) Cassandra cluster uses a JBOD configuration.
Since we use quorum reads and writes, it is probably best to configure
the failure policy to `best_effort`, allowing the node to continue
operating in the face of a disk failure (where the data will simply be
treated as missing).

Bug: T169939
Change-Id: I794e0a2850c54545ccb9c1b6f0ce54a72c6ed5c0

--- a/hieradata/role/common/restbase/production_ng.yaml
+++ b/hieradata/role/common/restbase/production_ng.yaml
@@ -125,6 +125,7 @@ profile::cassandra::settings:
   permissions_validity_in_ms: 600000
   trickle_fsync: false
   client_encryption_enabled: true
+  disk_failure_policy: best_effort
 
 
 #
