labstore100[67] install params
new install params for labstore100[67].  uses its own partman recipe due
to the disks presenting differently when there is both an internal and
external raid controller on these systems.

Bug: T167984
Change-Id: I481e8422a74481f485814ffbaac33c179f221e1f

--- a/modules/install_server/files/autoinstall/netboot.cfg
+++ b/modules/install_server/files/autoinstall/netboot.cfg
@@ -101,6 +101,7 @@ d-i preseed/include_command string  \
         sodium) echo partman/lvm-ext-srv.cfg ;; \
         labpuppetmaster100[12]|labnet100[34]|labnodepool1002|labweb100[12]) echo partman/raid1-lvm-ext4-srv-noswap.cfg;; \
         labstore100[1-2]) echo partman/labstore-lvm-noraid-swap.cfg ;; \
+        labstore100[67]) echo partman/labstore100X-hwraid-flexdisks.cfg ;; \
         labstore200[1-4]) echo partman/labstore-lvm-noraid.cfg ;; \
         labtestneutron2001) echo partman/mw.cfg ;; \
         labtestnet2001) echo partman/raid1.cfg ;; \
