labstore100[67] partman recipe tweak
while the hp raid utlity saw these as sdd,sde,sdf, jessie sees them as
sda (disk shelf) sdb (1tb os raid1) and sdc (internal 12 disks raid10)

setting the os on the hw raid1, the /srv in the raid10 on internal disks
in an lvm.  the disk shelf is sda but not touched by this recpie, not
sure if we want to add it to the other raid10, or extend onto it via
lvm.

Bug: T167984
Change-Id: Id9805c87cc4aa6634be7c18a398271437ffa59a1

--- a/modules/install_server/files/autoinstall/partman/labstore100X-hwraid-flexdisks.cfg
+++ b/modules/install_server/files/autoinstall/partman/labstore100X-hwraid-flexdisks.cfg
@@ -1,15 +1,15 @@
 # Configuration to create:
-# Hardware RAID1 on 2 SFF drives in flex bays mounted at /dev/sde
+# Hardware RAID1 on 2 SFF drives in flex bays mounted at /dev/sdb
 # 1G on /boot outside of LVM
 # LVM volume of 95% remainder of sda is /
-# Hardware RAID10 on 12 LFF 4TB SATA disks mounted at /dev/sdf
+# Hardware RAID10 on 12 LFF 4TB SATA disks mounted at /dev/sdc
 # 95% of sdb allocated as /data
-# There is a hw raid10 of 12 LFF 6TB disks as /dev/sdd, but this recipe doesn't touch it.
+# There is a hw raid10 of 12 LFF 6TB disks as /dev/sda, but this recipe doesn't touch it.
 
 # remove any LVM already on the disks
 d-i	partman-lvm/device_remove_lvm	boolean	true
 
-# We'll be creating LVMs and partitioning disks SDE and SDF
+# We'll be creating LVMs and partitioning disks SDB and SDC
 d-i	partman-auto/method	string	lvm
 d-i	partman-auto/disk	string	/dev/sde /dev/sdf
 
@@ -23,7 +23,7 @@ d-i	partman-auto/expert_recipe	string	lvm ::	\
 				use_filesystem{ }	\
 				filesystem{ ext4 }	\
 				mountpoint{ /boot }	\
-				device { /dev/sde }	\
+				device { /dev/sdb }	\
 
 		.	\
 # setup the / filesystem within the LVM filling the 90% of the remaining space
@@ -36,7 +36,7 @@ d-i	partman-auto/expert_recipe	string	lvm ::	\
 				$defaultignore{ }	\
 				$lvmok{ }		\
 				mountpoint{ / }	\
-				device { /dev/sde }	\
+				device { /dev/sdb }	\
 		.	\
 # setup the SDB disk with a single LVM at 90% of the disk, and a mount in ext4 for /data
 			100000 1000 -1 ext4		\
@@ -48,7 +48,7 @@ d-i	partman-auto/expert_recipe	string	lvm ::	\
 				$defaultignore{ }	\
 				$lvmok{ }		\
 				mountpoint{ /data }	\
-				device { /dev/sdf }	\
+				device { /dev/sdc }	\
 
 
 		.
