--- a/modules/install_server/files/autoinstall/partman/labstore100X-hwraid-flexdisks.cfg
+++ b/modules/install_server/files/autoinstall/partman/labstore100X-hwraid-flexdisks.cfg
@@ -11,7 +11,7 @@ d-i	partman-lvm/device_remove_lvm	boolean	true
 
 # We'll be creating LVMs and partitioning disks SDB and SDC
 d-i	partman-auto/method	string	lvm
-d-i	partman-auto/disk	string	/dev/sde /dev/sdf
+d-i	partman-auto/disk	string	/dev/sdb /dev/sdc
 
 # setup a /boot partition of 1GB outside of the LVM
 d-i	partman-auto/expert_recipe	string	lvm ::	\
