grub install tweak
have to set fgrub to sdb

Change-Id: Ie56dcc701d5b76e341918d3003edfb4b509d5ddd

--- a/modules/install_server/files/autoinstall/partman/labstore100X-hwraid-flexdisks.cfg
+++ b/modules/install_server/files/autoinstall/partman/labstore100X-hwraid-flexdisks.cfg
@@ -59,6 +59,9 @@ d-i	partman/choose_partition	select	finish
 d-i	partman/confirm			boolean	true
 d-i	partman/confirm_nooverwrite 	boolean	true
 
+d-i	grub-installer/bootdev	string	/dev/sdb
+
+
 partman-basicfilesystems partman-basicfilesystems/no_swap boolean false
 
 
