--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -8,7 +8,7 @@ groups:
               manybubbles, haithams, jzerebecki, ashwinpp, robla, asherman,
               laner, declerambaul, srijan, junikowski, krenair, springle, jhobs, vbaranetsky,
               yurik, bsimmers, bcohn, hjiang, tomasz, csteipp, zareen, jgirault, ellery,
-              psinger, midom]
+              psinger, midom, tparscal]
   absent_ldap:
     description: meta group for absented users which had privileged LDAP access in the past
     members: [siddharth11, adavenport]
@@ -75,7 +75,7 @@ groups:
     description: access to terbium, mwlog hosts (private data) and bastion hosts
                  restricted folks use sudo to access apache / www-data resources
     members: [dartar, bearloga,
-              ezachte, jamesur, jdlrobson, tparscal, smalyshev,
+              ezachte, jamesur, jdlrobson, smalyshev,
               leila, santhosh, amire80, foks, chelsyx, dbarratt]
     privileges: ['ALL = (www-data,apache) NOPASSWD: ALL']
   cassandra-test-roots:
@@ -1269,7 +1269,7 @@ users:
     ssh_keys: []
     uid: 538
   tparscal:
-    ensure: present
+    ensure: absent
     gid: 500
     name: tparscal
     realname: Trevor Parscal
