--- a/hieradata/role/common/deployment_server.yaml
+++ b/hieradata/role/common/deployment_server.yaml
@@ -110,6 +110,8 @@ scap::sources:
     repository: operations/software/gerrit
   graphoid/deploy: {}
 #    lvs_service: graphoid
+  iegreview/iegreview:
+    repository: wikimedia/iegreview
   jobrunner/jobrunner:
     repository: mediawiki/services/jobrunner
   kartotherian/deploy:
