Deploy iegreview with scap3
* Convert from trebuchet to scap3
* Move environment file from deploy dir to /etc/iegreview.ini

Depends on application changes in https://phabricator.wikimedia.org/D766

Bug: T129154
Depends-On: I1bbe9b6af0e76e606375619812eebd71ff7eb123
Change-Id: I26198ee55139b7704d823d17d5e7bec79b497c5e

--- a/hieradata/role/common/deployment_server.yaml
+++ b/hieradata/role/common/deployment_server.yaml
@@ -110,6 +110,9 @@ scap::sources:
     repository: operations/software/gerrit
   graphoid/deploy: {}
 #    lvs_service: graphoid
+  iegreview/iegreview:
+    repository: wikimedia/iegreview
+    origin: phabricator
   jobrunner/jobrunner:
     repository: mediawiki/services/jobrunner
   kartotherian/deploy:
