Deploy iegreview with scap3
* Convert from trebuchet to scap3
* Move environment file from deploy dir to /etc/iegreview.ini

Depends on application changes which were made in
<https://phabricator.wikimedia.org/rWIEG69c4c3f>.

Bug: T129154
Depends-On: I1bbe9b6af0e76e606375619812eebd71ff7eb123
Change-Id: I26198ee55139b7704d823d17d5e7bec79b497c5e

--- a/hieradata/labs/deployment-prep/common.yaml
+++ b/hieradata/labs/deployment-prep/common.yaml
@@ -318,6 +318,11 @@ scap::sources:
   eventstreams/deploy:
     repository: mediawiki/services/eventstreams/deploy
 
+  # IEG grant review
+  iegreview/iegreview:
+    repository: iegreview
+    origin: phabricator
+
   jobrunner/jobrunner:
     repository: mediawiki/services/jobrunner
 
