cassandra: fix jbod_device invocation
Change-Id: I5e9475d7136bb7e320d96dadae8a48950809b84f

--- a/hieradata/hosts/restbase2001.yaml
+++ b/hieradata/hosts/restbase2001.yaml
@@ -1,2 +1,2 @@
 profile::cassandra::rack: 'b'
-cassandra::jbod_devices: ['sda', 'sdb', 'sdc', 'sdd', 'sde']
+cassandra::jbod_devices: ['sda4', 'sdb4', 'sdc4', 'sdd4', 'sde4']
