add wmf employee dmaza to admin module
user is goign to be flagged with wmf group after addition to module

Bug: T174828
Change-Id: I5f580a8e1d3184cdcb04068b054bd5c3bd0324fc

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -2742,3 +2742,7 @@ ldap_only_users:
     ensure: present
     realname: Sam Wilson
     email: swilson@wikimedia.org
+  dmaza:
+    ensure: present
+    realname: Dayllan Maza
+    email: dmaza@wikimedia.org
