jobrunner: add nginx service
Bug: T174599
Change-Id: I8a70f41d128d288fc5e23cf19c8cf82f1efda5d2

--- a/conftool-data/node/eqiad.yaml
+++ b/conftool-data/node/eqiad.yaml
@@ -8,21 +8,21 @@ eqiad:
     mw1259.eqiad.wmnet: [apache2]
     mw1260.eqiad.wmnet: [apache2]
   jobrunner:
-    mw1161.eqiad.wmnet: [apache2]
-    mw1162.eqiad.wmnet: [apache2]
-    mw1163.eqiad.wmnet: [apache2]
-    mw1164.eqiad.wmnet: [apache2]
-    mw1165.eqiad.wmnet: [apache2]
-    mw1166.eqiad.wmnet: [apache2]
-    mw1167.eqiad.wmnet: [apache2]
-    mw1299.eqiad.wmnet: [apache2]
-    mw1300.eqiad.wmnet: [apache2]
-    mw1301.eqiad.wmnet: [apache2]
-    mw1302.eqiad.wmnet: [apache2]
-    mw1303.eqiad.wmnet: [apache2]
-    mw1304.eqiad.wmnet: [apache2]
-    mw1305.eqiad.wmnet: [apache2]
-    mw1306.eqiad.wmnet: [apache2]
+    mw1161.eqiad.wmnet: [apache2,nginx]
+    mw1162.eqiad.wmnet: [apache2,nginx]
+    mw1163.eqiad.wmnet: [apache2,nginx]
+    mw1164.eqiad.wmnet: [apache2,nginx]
+    mw1165.eqiad.wmnet: [apache2,nginx]
+    mw1166.eqiad.wmnet: [apache2,nginx]
+    mw1167.eqiad.wmnet: [apache2,nginx]
+    mw1299.eqiad.wmnet: [apache2,nginx]
+    mw1300.eqiad.wmnet: [apache2,nginx]
+    mw1301.eqiad.wmnet: [apache2,nginx]
+    mw1302.eqiad.wmnet: [apache2,nginx]
+    mw1303.eqiad.wmnet: [apache2,nginx]
+    mw1304.eqiad.wmnet: [apache2,nginx]
+    mw1305.eqiad.wmnet: [apache2,nginx]
+    mw1306.eqiad.wmnet: [apache2,nginx]
   api_appserver:
     mw1189.eqiad.wmnet: [apache2,nginx]
     mw1190.eqiad.wmnet: [apache2,nginx]
