--- a/conftool-data/node/codfw.yaml
+++ b/conftool-data/node/codfw.yaml
@@ -142,21 +142,21 @@ codfw:
     mw2244.codfw.wmnet: [apache2,nginx]
     mw2245.codfw.wmnet: [apache2,nginx]
   jobrunner:
-    mw2153.codfw.wmnet: [apache2]
-    mw2154.codfw.wmnet: [apache2]
-    mw2155.codfw.wmnet: [apache2]
-    mw2156.codfw.wmnet: [apache2]
-    mw2157.codfw.wmnet: [apache2]
-    mw2158.codfw.wmnet: [apache2]
-    mw2159.codfw.wmnet: [apache2]
-    mw2160.codfw.wmnet: [apache2]
-    mw2161.codfw.wmnet: [apache2]
-    mw2162.codfw.wmnet: [apache2]
-    mw2243.codfw.wmnet: [apache2]
-    mw2247.codfw.wmnet: [apache2]
-    mw2248.codfw.wmnet: [apache2]
-    mw2249.codfw.wmnet: [apache2]
-    mw2250.codfw.wmnet: [apache2]
+    mw2153.codfw.wmnet: [apache2,nginx]
+    mw2154.codfw.wmnet: [apache2,nginx]
+    mw2155.codfw.wmnet: [apache2,nginx]
+    mw2156.codfw.wmnet: [apache2,nginx]
+    mw2157.codfw.wmnet: [apache2,nginx]
+    mw2158.codfw.wmnet: [apache2,nginx]
+    mw2159.codfw.wmnet: [apache2,nginx]
+    mw2160.codfw.wmnet: [apache2,nginx]
+    mw2161.codfw.wmnet: [apache2,nginx]
+    mw2162.codfw.wmnet: [apache2,nginx]
+    mw2243.codfw.wmnet: [apache2,nginx]
+    mw2247.codfw.wmnet: [apache2,nginx]
+    mw2248.codfw.wmnet: [apache2,nginx]
+    mw2249.codfw.wmnet: [apache2,nginx]
+    mw2250.codfw.wmnet: [apache2,nginx]
   videoscaler:
     mw2118.codfw.wmnet: [apache2]
     mw2119.codfw.wmnet: [apache2]
