--- a/hieradata/role/common/restbase/production_ng.yaml
+++ b/hieradata/role/common/restbase/production_ng.yaml
@@ -41,13 +41,6 @@ profile::cassandra::metrics_blacklist:
   - .*\.metrics\.Table\..*$
 ## Instances
 profile::cassandra::instances:
-  # "restbase1007.eqiad.wmnet":
-  #   a:
-  #     listen_address: 10.64.0.230
-  #   b:
-  #     listen_address: 10.64.0.231
-  #   c:
-  #     listen_address: 10.64.0.232
   # "restbase1008.eqiad.wmnet":
   #   a:
   #     listen_address: 10.64.32.187
@@ -82,6 +75,43 @@ profile::cassandra::instances:
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-b/saved_caches
     c:
       listen_address: 10.64.48.131
+      data_file_directories:
+        - /srv/sda4/cassandra-c/data
+        - /srv/sdb4/cassandra-c/data
+        - /srv/sdc4/cassandra-c/data
+        - /srv/sdd4/cassandra-c/data
+        - /srv/sde4/cassandra-c/data
+      heapdump_directory: /srv/sdc4/cassandra-c
+      commitlog_directory: /srv/cassandra/instance-data/cassandra-c/commitlog
+      hints_directory: /srv/cassandra/instance-data/cassandra-c/hints
+      saved_caches_directory: /srv/cassandra/instance-data/cassandra-c/saved_caches
+  "restbase1010.eqiad.wmnet":
+    a:
+      listen_address: 10.64.0.114
+      data_file_directories:
+        - /srv/sda4/cassandra-a/data
+        - /srv/sdb4/cassandra-a/data
+        - /srv/sdc4/cassandra-a/data
+        - /srv/sdd4/cassandra-a/data
+        - /srv/sde4/cassandra-a/data
+      heapdump_directory: /srv/sda4/cassandra-a
+      commitlog_directory: /srv/cassandra/instance-data/cassandra-a/commitlog
+      hints_directory: /srv/cassandra/instance-data/cassandra-a/hints
+      saved_caches_directory: /srv/cassandra/instance-data/cassandra-a/saved_caches
+    b:
+      listen_address: 10.64.0.115
+      data_file_directories:
+        - /srv/sda4/cassandra-b/data
+        - /srv/sdb4/cassandra-b/data
+        - /srv/sdc4/cassandra-b/data
+        - /srv/sdd4/cassandra-b/data
+        - /srv/sde4/cassandra-b/data
+      heapdump_directory: /srv/sdb4/cassandra-b
+      commitlog_directory: /srv/cassandra/instance-data/cassandra-b/commitlog
+      hints_directory: /srv/cassandra/instance-data/cassandra-b/hints
+      saved_caches_directory: /srv/cassandra/instance-data/cassandra-b/saved_caches
+    c:
+      listen_address: 10.64.0.116
       data_file_directories:
         - /srv/sda4/cassandra-c/data
         - /srv/sdb4/cassandra-c/data
