jobrunner: add LVS service configuration
Bug: T174599
Change-Id: I65d0372a7ca3bb2e5e613cfc94feab9602030267

--- a/hieradata/role/common/mediawiki/jobrunner.yaml
+++ b/hieradata/role/common/mediawiki/jobrunner.yaml
@@ -17,6 +17,8 @@ hhvm::extra::fcgi:
       size: 30
     "namedPools.cirrus-eqiad":
       size: 30
+role::lvs::realserver::pools:
+  jobrunner: {}
 
 # Use the future parser here
 profile::base::environment: "future"
