--- a/hieradata/common/lvs/configuration.yaml
+++ b/hieradata/common/lvs/configuration.yaml
@@ -132,6 +132,9 @@ lvs::configuration::lvs_service_ips:
   "recommendation-api": &ip_block038
     eqiad: 10.2.2.37
     codfw: 10.2.1.37
+  jobrunner: &ip_block039
+    eqiad: 10.2.2.26
+    codfw: 10.2.1.26
 
 lvs::configuration::lvs_services:
   text:
@@ -1332,3 +1335,30 @@ lvs::configuration::lvs_services:
           hostname: recommendation-api.svc.eqiad.wmnet
         codfw:
           hostname: recommendation-api.svc.codfw.wmnet
+  jobrunner:
+    description: "JobRunner LVS interface (https)"
+    class: low-traffic
+    sites:
+    - eqiad
+    - codfw
+    ip: *ip_block039
+    port: 443
+    # It's ok to lose most of the service capacity in this case
+    depool-threshold: '.2'
+    monitors:
+      ProxyFetch:
+        url:
+        - https://jobrunner.discovery.wmnet/w/health-check.php
+      IdleConnection:
+        timeout-clean-reconnect: 3
+        max-delay: 300
+    conftool:
+      cluster: jobrunner
+      service: nginx
+    icinga:
+      check_command: "check_https_url!/w/health-check.php"
+      sites:
+        eqiad:
+          hostname: jobrunner.svc.eqiad.wmnet
+        codfw:
+          hostname: jobrunner.svc.codfw.wmnet
