--- a/hieradata/role/common/mediawiki/jobrunner.yaml
+++ b/hieradata/role/common/mediawiki/jobrunner.yaml
@@ -17,6 +17,9 @@ hhvm::extra::fcgi:
       size: 30
     "namedPools.cirrus-eqiad":
       size: 30
+role::lvs::realserver::pools:
+  hhvm:
+    lvs_name: jobrunner
 
 # Use the future parser here
 profile::base::environment: "future"
