convert 'other' dump cron jobs into role/profile under dumps
[WIP] incomplete, broken, etc etc

This also includes the nfs client and sever setup, since that is
a requirement for any dumps to run.

cron jobs are split into:
* weekly jobs, all listed in one bash script
* daily jobs, all listed in another bash script
* wikidata jobs, all listed in a third bash script

No corn jobs will be activated with this commit; all jobs are commented
out.  Activation would require removing the corresponding code from
the existing snapshot module and will be done one at a time.

This will be split into a separate commit:

while we set up the new modules, we also do some cleanup on the
bash scripts that will run out of cron:
* convert tabs to whitespace
* double quotes and curly brackets around var names as needed
* full paths to executables
* php, gzip, bzip2 paths always read from dumps config file
* use $() instead of backquotes

Bug: T175528

Change-Id: Ib3ed35e886d330e6d9112791b84e44d493ffaaea

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -312,6 +312,12 @@ dumps_clients_snapshots:
   - snapshot1005.eqiad.wmnet
   - snapshot1006.eqiad.wmnet
   - snapshot1007.eqiad.wmnet
+dumps_client_config:
+  repodir: /srv/deployment/dumps/dumps/xmldumps-backup
+  confsdir: /etc/dumps/confs
+  nfsmount: /mnt/dumpsdata
+  otherdumpsdir: /mnt/dumpsdata/other
+  apachedir: /srv/mediawiki
 
 # Schemas names that match this regex
 # will not be produced to the eventlogging-valid-mixed
