--- a/modules/dumps/files/web/xmldumps/logrotate.conf
+++ b/modules/dumps/files/web/xmldumps/logrotate.conf
@@ -1,5 +1,6 @@
 # logrotate config for datasets web logs
 # This file is managed by Puppet
+# modules/dumps/web/xmldumps/logrotate.conf
 
 /var/log/nginx/*.log
 {
