Send Thumbor error log to logstash
Bug: T150734
Change-Id: I014a3d38cba022e758d95855a62c09352754a606

--- a/hieradata/role/eqiad/thumbor/mediawiki.yaml
+++ b/hieradata/role/eqiad/thumbor/mediawiki.yaml
@@ -16,3 +16,6 @@ thumbor_memcached_servers_nutcracker:
   - '10.64.48.72:11211:1 "shard04"' # thumbor1004
 
 thumbor::poolcounter_server: 'poolcounter1001.eqiad.wmnet'
+
+thumbor::logstash_host: 'logstash.svc.eqiad.wmnet'
+thumbor::logstash_port: 11514
