--- a/hieradata/common/lvs/configuration.yaml
+++ b/hieradata/common/lvs/configuration.yaml
@@ -1308,8 +1308,8 @@ lvs::configuration::lvs_services:
     conftool:
       cluster: logstash
       service: logstash-udp2log
-  "recommendation-api":
-    description: Service for recommendation API
+  recommendation-api:
+    description: "Service for recommendation API. recommandation-api.svc%{::site}.wmnet"
     class: low-traffic
     sites:
     - eqiad
@@ -1336,7 +1336,7 @@ lvs::configuration::lvs_services:
         codfw:
           hostname: recommendation-api.svc.codfw.wmnet
   jobrunner:
-    description: "JobRunner LVS interface (https)"
+    description: "JobRunner LVS interface (https). jobrunner.svc.%{::site}.wmnet"
     class: low-traffic
     sites:
     - eqiad
@@ -1348,7 +1348,7 @@ lvs::configuration::lvs_services:
     monitors:
       ProxyFetch:
         url:
-        - https://jobrunner.discovery.wmnet/w/health-check.php
+        - https://localhost/w/health-check.php
       IdleConnection:
         timeout-clean-reconnect: 3
         max-delay: 300
@@ -1356,7 +1356,7 @@ lvs::configuration::lvs_services:
       cluster: jobrunner
       service: nginx
     icinga:
-      check_command: "check_https_url!/w/health-check.php"
+      check_command: "check_https_url!jobrunner.svc.%{::site}.wmnet!/w/health-check.php"
       sites:
         eqiad:
           hostname: jobrunner.svc.eqiad.wmnet
