wdqs - activate wdqs100[45] as wdqs nodes
Bug: T171210
Change-Id: Iba661257cc15e978edd1a0cf605c423fe2998508

--- a/conftool-data/node/eqiad.yaml
+++ b/conftool-data/node/eqiad.yaml
@@ -288,6 +288,8 @@ eqiad:
     wdqs1001.eqiad.wmnet: [wdqs]
     wdqs1002.eqiad.wmnet: [wdqs]
     wdqs1003.eqiad.wmnet: [wdqs]
+    wdqs1004.eqiad.wmnet: [wdqs]
+    wdqs1005.eqiad.wmnet: [wdqs]
   logstash:
     logstash1001.eqiad.wmnet: [kibana, logstash, logstash-log4j, logstash-gelf, logstash-json, logstash-syslog, logstash-udp2log]
     logstash1002.eqiad.wmnet: [kibana, logstash, logstash-log4j, logstash-gelf, logstash-json, logstash-syslog, logstash-udp2log]
