--- a/modules/install_server/files/autoinstall/netboot.cfg
+++ b/modules/install_server/files/autoinstall/netboot.cfg
@@ -116,6 +116,7 @@ d-i preseed/include_command string  \
         lithium|wezen) echo partman/raid1-gpt.cfg ;; \
         logstash100[1-3]) echo partman/raid1-lvm-ext4-srv.cfg ;; \
         logstash100[4-6]) echo partman/logstash.cfg ;; \
+        logstash100[7-9]) echo partman/flat.cfg ;; \
         lvs100[7-9]|lvs101[012]|lvs2*) echo partman/flat.cfg ;; \
         lvs100[1-6]|lvs[34]*) echo partman/raid1-lvm.cfg ;; \
         mc[0-9]*) echo partman/mc.cfg ;; \
