cassandra: enable jmx_exporter for cassandra 3 cluster
Bug: T169939
Change-Id: Ie03df3e40923e957906b238fd40421735c5a0eab

--- a/hieradata/role/common/restbase/production_ng.yaml
+++ b/hieradata/role/common/restbase/production_ng.yaml
@@ -54,6 +54,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-a/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-a/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-a/saved_caches
+      jmx_exporter_enabled: true
     b:
       listen_address: 10.64.32.195
       data_file_directories:
@@ -66,6 +67,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-b/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-b/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-b/saved_caches
+      jmx_exporter_enabled: true
     c:
       listen_address: 10.64.32.196
       data_file_directories:
@@ -78,6 +80,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-c/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-c/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-c/saved_caches
+      jmx_exporter_enabled: true
   "restbase1009.eqiad.wmnet":
     a:
       listen_address: 10.64.48.120
@@ -91,6 +94,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-a/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-a/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-a/saved_caches
+      jmx_exporter_enabled: true
     b:
       listen_address: 10.64.48.130
       data_file_directories:
@@ -103,6 +107,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-b/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-b/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-b/saved_caches
+      jmx_exporter_enabled: true
     c:
       listen_address: 10.64.48.131
       data_file_directories:
@@ -115,6 +120,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-c/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-c/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-c/saved_caches
+      jmx_exporter_enabled: true
   "restbase1010.eqiad.wmnet":
     a:
       listen_address: 10.64.0.114
@@ -128,6 +134,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-a/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-a/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-a/saved_caches
+      jmx_exporter_enabled: true
     b:
       listen_address: 10.64.0.115
       data_file_directories:
@@ -140,6 +147,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-b/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-b/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-b/saved_caches
+      jmx_exporter_enabled: true
     c:
       listen_address: 10.64.0.116
       data_file_directories:
@@ -152,6 +160,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-c/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-c/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-c/saved_caches
+      jmx_exporter_enabled: true
   "restbase2001.codfw.wmnet":
     a:
       listen_address: 10.192.16.162
@@ -165,6 +174,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-a/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-a/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-a/saved_caches
+      jmx_exporter_enabled: true
     b:
       listen_address: 10.192.16.163
       data_file_directories:
@@ -177,6 +187,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-b/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-b/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-b/saved_caches
+      jmx_exporter_enabled: true
     c:
       listen_address: 10.192.16.164
       data_file_directories:
@@ -189,6 +200,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-c/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-c/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-c/saved_caches
+      jmx_exporter_enabled: true
   "restbase2003.codfw.wmnet":
     a:
       listen_address: 10.192.32.134
@@ -202,6 +214,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-a/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-a/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-a/saved_caches
+      jmx_exporter_enabled: true
     b:
       listen_address: 10.192.32.135
       data_file_directories:
@@ -214,6 +227,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-b/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-b/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-b/saved_caches
+      jmx_exporter_enabled: true
     c:
       listen_address: 10.192.32.136
       data_file_directories:
@@ -226,6 +240,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-c/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-c/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-c/saved_caches
+      jmx_exporter_enabled: true
   "restbase2005.codfw.wmnet":
     a:
       listen_address: 10.192.48.46
@@ -239,6 +254,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-a/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-a/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-a/saved_caches
+      jmx_exporter_enabled: true
     b:
       listen_address: 10.192.48.47
       data_file_directories:
@@ -251,6 +267,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-b/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-b/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-b/saved_caches
+      jmx_exporter_enabled: true
     c:
       listen_address: 10.192.48.48
       data_file_directories:
@@ -263,6 +280,7 @@ profile::cassandra::instances:
       commitlog_directory: /srv/cassandra/instance-data/cassandra-c/commitlog
       hints_directory: /srv/cassandra/instance-data/cassandra-c/hints
       saved_caches_directory: /srv/cassandra/instance-data/cassandra-c/saved_caches
+      jmx_exporter_enabled: true
 
 
 profile::cassandra::settings:
