openstack: correct key path for labtest settings
Bug: T171494
Change-Id: I2b2083a6fc5cd023279363a7830cda85ff3cb50f

--- a/hieradata/codfw/profile/openstack/labtest.yaml
+++ b/hieradata/codfw/profile/openstack/labtest.yaml
@@ -5,8 +5,8 @@ profile::openstack::labtest::designate_host: 'labtestservices2001.codfw.wmnet'
 profile::openstack::labtest::designate_host_standby: 'labtestservices2001.wikimedia.org'
 profile::openstack::labtest::nova_api_host: 'labtestnet2001.codfw.wmnet'
 profile::openstack::labtest::labs_hosts_range: '10.192.20.0/24'
-profile::openstack::labtestn::horizon_host: 'labtestweb2001.wikimedia.org'
-profile::openstack::labtestn::nova_network_host: 'labtestnet2001.codfw.wmnet'
+profile::openstack::labtest::horizon_host: 'labtestweb2001.wikimedia.org'
+profile::openstack::labtest::nova_network_host: 'labtestnet2001.codfw.wmnet'
 profile::openstack::labtest::rabbit_monitor_user: 'monitoring'
 profile::openstack::labtest::rabbit_file_handles: 8192
 profile::openstack::labtest::osm_host: 'labtestwikitech.wikimedia.org'
