--- a/hieradata/eqiad/profile/openstack/main/nova.yaml
+++ b/hieradata/eqiad/profile/openstack/main/nova.yaml
@@ -1,18 +1,18 @@
-profile::openstack::labtestn::nova::dmz_cidr: '208.80.155.0/22,10.0.0.0/8'
-profile::openstack::labtestn::nova::dhcp_domain: 'eqiad.wmflabs'
-profile::openstack::labtestn::nova::dhcp_start: '10.68.16.4'
-profile::openstack::labtestn::nova::quota_floating_ips: '0'
-profile::openstack::labtestn::nova::network_flat_tagged_base_interface: 'eth1'
-profile::openstack::labtestn::nova::network_flat_interface_vlan: '1102'
-profile::openstack::labtestn::nova::network_flat_interface: 'eth1.1102'
-profile::openstack::labtestn::nova::flat_network_bridge: 'br1102'
-profile::openstack::labtestn::nova::fixed_range: '10.68.16.0/21'
-profile::openstack::labtestn::nova::network_public_interface: 'eth0'
-profile::openstack::labtestn::nova::network_public_ip: '208.80.155.255'
-profile::openstack::labtestn::nova::zone: 'eqiad'
-profile::openstack::labtestn::nova::db_host: 'm5-master.eqiad.wmnet'
-profile::openstack::labtestn::nova::live_migration_uri: 'qemu://%s.eqiad.wmnet/system?pkipath=/var/lib/nova'
-profile::openstack::labtestn::nova::scheduler_pool:
+profile::openstack::main::nova::dmz_cidr: '208.80.155.0/22,10.0.0.0/8'
+profile::openstack::main::nova::dhcp_domain: 'eqiad.wmflabs'
+profile::openstack::main::nova::dhcp_start: '10.68.16.4'
+profile::openstack::main::nova::quota_floating_ips: '0'
+profile::openstack::main::nova::network_flat_tagged_base_interface: 'eth1'
+profile::openstack::main::nova::network_flat_interface_vlan: '1102'
+profile::openstack::main::nova::network_flat_interface: 'eth1.1102'
+profile::openstack::main::nova::flat_network_bridge: 'br1102'
+profile::openstack::main::nova::fixed_range: '10.68.16.0/21'
+profile::openstack::main::nova::network_public_interface: 'eth0'
+profile::openstack::main::nova::network_public_ip: '208.80.155.255'
+profile::openstack::main::nova::zone: 'eqiad'
+profile::openstack::main::nova::db_host: 'm5-master.eqiad.wmnet'
+profile::openstack::main::nova::live_migration_uri: 'qemu://%s.eqiad.wmnet/system?pkipath=/var/lib/nova'
+profile::openstack::main::nova::scheduler_pool:
   - labvirt1001
   - labvirt1002
   - labvirt1003
