openstack: amend keypaths for labtest nova settings
Bug: T171494
Change-Id: I97b4705b91d32bd0b1b911628eb621ca99c2ff48

--- a/hieradata/codfw/profile/openstack/labtest/nova.yaml
+++ b/hieradata/codfw/profile/openstack/labtest/nova.yaml
@@ -1,15 +1,15 @@
-profile::openstack::labtestn::nova::dmz_cidr: '208.80.155.0/22,10.0.0.0/8'
-profile::openstack::labtestn::nova::dhcp_domain: 'codfw.labtest'
-profile::openstack::labtestn::nova::dhcp_start: '10.196.16.4'
-profile::openstack::labtestn::nova::quota_floating_ips: '0'
-profile::openstack::labtestn::nova::network_flat_tagged_base_interface: 'eth1'
-profile::openstack::labtestn::nova::network_flat_interface_vlan: '2102'
-profile::openstack::labtestn::nova::network_flat_interface: 'eth1.2102'
-profile::openstack::labtestn::nova::flat_network_bridge: 'br2102'
-profile::openstack::labtestn::nova::fixed_range: '10.196.16.0/21'
-profile::openstack::labtestn::nova::network_public_interface: 'eth0'
-profile::openstack::labtestn::nova::network_public_ip: '208.80.155.255'
-profile::openstack::labtestn::nova::zone: 'codfw'
-profile::openstack::labtestn::nova::scheduler_pool: ['labtestvirt2001', 'labtestvirt2002']
-profile::openstack::labtestn::nova::db_host: 'labtestcontrol2001.wikimedia.org'
-profile::openstack::labtestn::nova::live_migration_uri: 'test'
+profile::openstack::labtest::nova::dmz_cidr: '208.80.155.0/22,10.0.0.0/8'
+profile::openstack::labtest::nova::dhcp_domain: 'codfw.labtest'
+profile::openstack::labtest::nova::dhcp_start: '10.196.16.4'
+profile::openstack::labtest::nova::quota_floating_ips: '0'
+profile::openstack::labtest::nova::network_flat_tagged_base_interface: 'eth1'
+profile::openstack::labtest::nova::network_flat_interface_vlan: '2102'
+profile::openstack::labtest::nova::network_flat_interface: 'eth1.2102'
+profile::openstack::labtest::nova::flat_network_bridge: 'br2102'
+profile::openstack::labtest::nova::fixed_range: '10.196.16.0/21'
+profile::openstack::labtest::nova::network_public_interface: 'eth0'
+profile::openstack::labtest::nova::network_public_ip: '208.80.155.255'
+profile::openstack::labtest::nova::zone: 'codfw'
+profile::openstack::labtest::nova::scheduler_pool: ['labtestvirt2001', 'labtestvirt2002']
+profile::openstack::labtest::nova::db_host: 'labtestcontrol2001.wikimedia.org'
+profile::openstack::labtest::nova::live_migration_uri: 'test'
