admins: add rschoenbaechler to LDAP-only WMF users
For access to pivot.wikimedia.org, WMF employee per:

https://phabricator.wikimedia.org/p/schoenbaechler/

Bug: T175156
Change-Id: I5c69cbe59aee3c1ae29bb2d0d3655983b324feb2

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -2670,6 +2670,10 @@ ldap_only_users:
     ensure: present
     realname: Rita Ho
     email: rho@wikimedia.org
+  rschoenbaechler:
+    ensure: present
+    realname: Robin Schoenbaechler
+    email: rschoenbaechler@wikimedia.org
   ryasmeen:
     ensure: present
     realname: Rummana Yasmeen
