admins: add schoenbaechler to LDAP-only WMF users
For access to pivot.wikimedia.org, WMF employee per:

cn: Schoenbaechler
mail: rschoenbaechler@wikimedia
uid: schoenbaechler

https://phabricator.wikimedia.org/p/schoenbaechler/

Bug: T175156
Change-Id: I5c69cbe59aee3c1ae29bb2d0d3655983b324feb2

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -2678,6 +2678,10 @@ ldap_only_users:
     ensure: present
     realname: Tim Landscheidt
     email: tim@tim-landscheidt.de
+  schoenbaechler:
+    ensure: present
+    realname: Robin Schoenbaechler
+    email: rschoenbaechler@wikimedia.org
   seddon:
     ensure: present
     realname: Joseph Seddon
